--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Leaderboard</title>
+    <title>Leetcode Leaderboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -28,5 +28,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
