--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <thead>
                 <tr>
                     <th>S.no.</th>
-                    <th>Name</th>
+                    <th>Leetcode Username</th>
                     <th>Profile</th>
                 </tr>
             </thead>
