--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         </table>
     </div>
 
+    <footer>
+        <p>In order to get your name in the leaderboard, contact me.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
-
 
 </html>
