--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leetcode Leaderboard</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body>
@@ -26,9 +28,23 @@
         </table>
     </div>
 
-    <footer>
-        <p>In order to get your name in the leaderboard, contact me.</p>
-    </footer>
+    <div class="contact">
+        <h3>If you want your name in the leaderboard, send your Leetcode Profile link here 👇</h3>
+        <div class="social-links">
+            <a href="https://wa.me/+918081605775" target="_blank" aria-label="Chat on WhatsApp">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+
+            <a href="https://www.linkedin.com/in/Harsh-Bajpai1194" target="_blank" aria-label="View LinkedIn Profile">
+                <i class="fab fa-linkedin"></i>
+            </a>
+
+            <a href="mailto:harshbajpai1194@gmail.com" aria-label="Send an Email">
+                <i class="fas fa-envelope"></i>
+            </a>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
