--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <i class="fab fa-linkedin"></i>
             </a>
 
-            <a href="mailto:harshbajpai1194@gmail.com" aria-label="Send an Email">
+            <a href="mailto:harshbajpai1194@gmail.com?subject=Leetcode Leaderboards&body=Hello, I also want my name to be listed in Leetcode Leaderboards. Here's my Leetcode profile link👉">
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
