--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="contact">
         <h3>If you want your name in the leaderboard, send your Leetcode Profile link here 👇</h3>
         <div class="social-links">
-            <a href="https://wa.me/+918081605775" target="_blank" aria-label="Chat on WhatsApp">
+            <a href="https://wa.me/+918081605775?text=Hello%2C%20I%20also%20want%20my%20name%20to%20be%20listed%20in%20Leetcode%20Leaderboards.%20%0A%0AHere's%20my%20Leetcode%20profile%20link%0Ahttps%3A%2F%2Fleetcode.com%2Fu%2Fusername%2F" target="_blank" aria-label="Chat on WhatsApp">
                 <i class="fab fa-whatsapp"></i>
             </a>
 
@@ -39,7 +39,7 @@
                 <i class="fab fa-linkedin"></i>
             </a>
 
-            <a href="mailto:harshbajpai1194@gmail.com?subject=Leetcode Leaderboards&body=Hello, I also want my name to be listed in Leetcode Leaderboards. Here's my Leetcode profile link👉">
+            <a href="mailto:harshbajpai1194@gmail.com?subject=Leetcode Leaderboards&body=Hello, I also want my name to be listed in Leetcode Leaderboards.%0AHere's my Leetcode profile link%F0%9F%91%89https://leetcode.com/u/username/">
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
