Added No. of Questions Solved

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <tr>
                     <th>S.no.</th>
                     <th>Leetcode Username</th>
+                    <th>Solved</th>
                     <th>Profile</th>
                 </tr>
             </thead>
