--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <div class="leaderboard-container">
         <h1>Leaderboard</h1>
-
+        <div id="last-updated" style="text-align: center; color: #888; font-size: 0.9em; margin-bottom: 15px;">
+            Last updated: --
+        </div>
         <table class="leaderboard-table">
             <thead>
                 <tr>
