--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="leaderboard-container">
-        <h1>Leaderboard</h1>
+        <h1>LEETCODE LEADERBOARD</h1>
         <div id="last-updated" style="text-align: center; color: #888; font-size: 0.9em; margin-bottom: 15px;">
             Last updated: --
         </div>
@@ -50,5 +50,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
