--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <thead>
                 <tr>
                     <th>S.no.</th>
-                    <th>Leetcode Username</th>
+                    <th>NAME</th>
                     <th>Solved</th>
                     <th>Profile</th>
                 </tr>
@@ -53,3 +53,4 @@
 
 
 </html>
+
