--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </div>
         <table class="leaderboard-table">
             <thead>
+                <div class="search-container">
+    <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="🔍 Search for names...">
+</div>
                 <tr>
                     <th>S.no.</th>
                     <th>NAME</th>
@@ -53,4 +56,5 @@
 
 
 </html>
+
 
