Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-
+    <img src="leetcode.jpg" alt="LEETCODE" />
     <div class="leaderboard-container">
         <h1>LEETCODE LEADERBOARD</h1>
         
@@ -109,3 +109,4 @@
     </script>
 </body>
 </html>
+
