Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <style>
+        .leetcode-img
+        {
+            top: 2%;
+            left: 2%;
+        }
         .search-container {
             text-align: center;
             margin-bottom: 20px;
@@ -34,7 +39,7 @@
 </head>
 
 <body>
-    <img src="leetcode.jpg" alt="LEETCODE" />
+    <img src="leetcode.jpg" alt="LEETCODE" class="leetcode-img"/>
     <div class="leaderboard-container">
         <h1>LEETCODE LEADERBOARD</h1>
         
@@ -109,4 +114,5 @@
     </script>
 </body>
 </html>
+
 
