--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <style>
-        .leetcode-img
+        .leetcode-img 
         {
-            top: 2%;
-            left: 2%;
+        position: absolute; 
+        top: 20px;           
+        left: 20px;        
         }
         .search-container {
             text-align: center;
@@ -114,5 +115,6 @@
     </script>
 </body>
 </html>
+
 
 
