--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         .leetcode-img
         {
+            position: relative;
             top: 2%;
             left: 2%;
         }
@@ -114,4 +115,5 @@
     </script>
 </body>
 </html>
+
 
