--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         .leetcode-img
         {
             position: relative;
-            top: 2%;
-            left: 2%;
+            top: 20px;  
+            left: 20px;
         }
         .search-container {
             text-align: center;
@@ -115,5 +115,6 @@
     </script>
 </body>
 </html>
+
 
 
