--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         .leetcode-img
         {
-            position: relative;
+            position: absolute;
             top: 20px;  
             left: 20px;
         }
@@ -115,6 +115,7 @@
     </script>
 </body>
 </html>
+
 
 
 
