Add server.js for deployment

--- a/index.html
+++ b/index.html
@@ -270,15 +270,43 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            fetch('http://localhost:5000/api/leaderboard')
+            // REPLACE THIS:
+            // fetch('http://localhost:5000/api/leaderboard')
+
+            // WITH THIS (Use your actual Render link):
+            fetch('https://leetcode-leaderboards-xxxx.onrender.com/api/leaderboard') // <-- KEEP YOUR RENDER URL HERE
                 .then(response => {
                     if (!response.ok) throw new Error("Failed to load API data");
                     return response.json();
                 })
                 .then(data => {
+                    // 1. Update "Last Updated" Time
+                    if (data.last_updated) {
+                        document.getElementById('last-updated').innerText = `Last updated: ${data.last_updated}`;
+                    }
+
+                    // 2. Populate Activity Feed
+                    const activityContent = document.getElementById('activity-content');
+                    if (data.activities && data.activities.length > 0) {
+                        let html = '<div style="text-align:left; width:100%;">';
+                        data.activities.forEach(act => {
+                            html += `
+                        <div style="margin-bottom:10px; border-bottom:1px solid #333; padding-bottom:5px;">
+                            <span style="color:white; font-weight:bold;">${act.text}</span>
+                            <br>
+                            <span style="font-size:0.8em; color:#666;">${act.time}</span>
+                        </div>`;
+                        });
+                        html += '</div>';
+                        activityContent.innerHTML = html;
+                    }
+
+                    // 3. Populate Leaderboard Table
                     const leaderboardBody = document.getElementById("leaderboard-body");
                     leaderboardBody.innerHTML = "";
-                    const sortedData = data.sort((a, b) => (b.total_solved || 0) - (a.total_solved || 0));
+
+                    // Note: data.users is the list now
+                    const sortedData = data.users.sort((a, b) => (b.total_solved || 0) - (a.total_solved || 0));
 
                     sortedData.forEach((user, index) => {
                         const tr = document.createElement("tr");
@@ -295,7 +323,6 @@
                 })
                 .catch(error => console.error("Error:", error));
         });
-
         // SEARCH FUNCTION
         function filterTable() {
             var input = document.getElementById("searchInput");
