--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            fetch('https://leetcode-leaderboards.onrender.com') 
+            fetch('https://leetcode-leaderboards.onrender.com/api/leaderboard') 
                 .then(response => {
                     if (!response.ok) throw new Error("Failed to load API data");
                     return response.json();
