Wrap leaderboard table in a div container

--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
                 <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="🔍 Search for names...">
             </div>
 
-            <table class="leaderboard-table">
-                <thead>
-                    <tr>
-                        <th>S.no.</th>
-                        <th>NAME</th>
-                        <th>Solved</th>
-                        <th>Profile</th>
-                    </tr>
-                </thead>
-                <tbody id="leaderboard-body">
-                </tbody>
-            </table>
+            <div class="table-wrapper">
+                <table class="leaderboard-table">
+                    <thead>
+                        <tr>
+                            <th>S.no.</th>
+                            <th>NAME</th>
+                            <th>Solved</th>
+                            <th>Profile</th>
+                        </tr>
+                    </thead>
+                    <tbody id="leaderboard-body">
+                        </tbody>
+                </table>
+            </div>
+            
         </div>
 
         <div class="activity-container">
